src/test/resources/lab2-samples/bad6.out

*** Error line 5.
    else
    ^^^^
*** syntax error

