src/test/resources/lab2-samples/bad6.decaf
void main() {
  int xyz;
  
  while (xyz) {
    else
      z = 24;
  }
}
